--- a/Arrays/Dynamic Arrays.ipynb
+++ b/Arrays/Dynamic Arrays.ipynb
@@ -9,45 +9,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Length: 0 ; Size in bytes: 64\n",
-      "Length: 1 ; Size in bytes: 96\n",
-      "Length: 2 ; Size in bytes: 96\n",
-      "Length: 3 ; Size in bytes: 96\n",
-      "Length: 4 ; Size in bytes: 96\n",
-      "Length: 5 ; Size in bytes: 128\n",
-      "Length: 6 ; Size in bytes: 128\n",
-      "Length: 7 ; Size in bytes: 128\n",
-      "Length: 8 ; Size in bytes: 128\n",
-      "Length: 9 ; Size in bytes: 192\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "\n",
     "n = 10\n",
     "\n",
-    "data = []\n",
+    "arr = []\n",
     "\n",
     "for i in range(n):\n",
     "    \n",
     "    # Number of elements\n",
-    "    a = len(data)\n",
+    "    a = len(arr)\n",
     "    \n",
     "    # Actual Size in Bytes\n",
-    "    b = sys.getsizeof(data)\n",
+    "    b = sys.getsizeof(arr)\n",
     "    \n",
     "    print(f'Length: {a} ; Size in bytes: {b}')\n",
     "    \n",
     "     # increase the length by one \n",
-    "    data.append(n)    "
+    "    arr.append(i)    "
    ]
   },
   {
@@ -59,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,17 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You won't able to tab to see me!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "m._private()"
    ]
@@ -108,10 +83,168 @@
     "\n",
     "class DynamicArray:\n",
     "    \n",
-    "    def _init_(self):\n",
+    "    def __init__(self):\n",
     "        \n",
-    "    "
+    "        self.n = 0\n",
+    "        self.capacity = 1\n",
+    "        self.A = self.make_array(self.capacity)\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return self.n\n",
+    "    \n",
+    "    def __getitem__(self,k):\n",
+    "        \n",
+    "        \n",
+    "        if not 0 <= k < self.n:\n",
+    "            return IndexError('K is out of bounds!')\n",
+    "        \n",
+    "        return self.A[k]\n",
+    "    \n",
+    "    def append(self,ele):\n",
+    "        \n",
+    "        if self.n == self.capacity:\n",
+    "            self._resize(2*self.capacity)  #2x capacity if isn't enough\n",
+    "           \n",
+    "        \n",
+    "        self.A[self.n] = ele\n",
+    "        self.n += 1\n",
+    "        \n",
+    "    def _resize(self,new_cap):\n",
+    "        \n",
+    "        B = self.make_array(new_cap)\n",
+    "        \n",
+    "        for k in range(self.n):\n",
+    "            B[k] = self.A[k]\n",
+    "            \n",
+    "        self.A = B\n",
+    "        self.capacity = new_cap\n",
+    "        \n",
+    "    def make_array(self,new_cap):\n",
+    "        \n",
+    "        return (new_cap * ctypes.py_object)()\n",
+    "            "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = DynamicArray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr.append(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr.append(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
